added autorization utils

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,17 +11,17 @@ set(CMAKE_CXX_STANDARD 23)
 message(STATUS "Project source directory ${PROJECT_SOURCE_DIR}")
 
 add_executable(budget_tracker main.cpp
-        src/db/IDataBase.h
-        src/db/DatabaseTables.h
-        src/db/SqliteDataBaseService.cpp
-        src/db/SqliteDataBaseService.h
+        src/IDataBase.h
+        src/DatabaseTables.h
+        src/SqliteDataBaseService.cpp
+        src/SqliteDataBaseService.h
         src/Paths.cpp
         src/Paths.h
         src/Exception.cpp
         src/Exception.h
         src/Singleton.h
-        src/db/SqliteDataBaseConnector.cpp
-        src/db/SqliteDataBaseConnector.h)
+        src/SqliteDataBaseConnector.cpp
+        src/SqliteDataBaseConnector.h src/App.cpp src/App.h src/Authorization.cpp src/Authorization.h src/Login.cpp src/Login.h)
 
 
 if (WIN32)
